--- a/styles/main.css
+++ b/styles/main.css
@@ -2,12 +2,12 @@
 
 ::selection {
   background: #717f962c;
-  color: #000;
+  color: #ffffff;
 }
 
 mark {
-  background: #717f962c;
-  color: #000;
+  background: #59595949;
+  color: #d4d4d4;
   padding: 3px 10px 3px 10px;
   border-radius: 5px;
 }
@@ -21,12 +21,12 @@ body {
   font-variation-settings: 'wght' 400;
   font-variant: common-ligatures contextual;
   letter-spacing: -0.02em;
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100px),
+  /* background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100px),
     fixed 0 0 / 20px 20px radial-gradient(#d1d1d1 1px, transparent 0),
-    fixed 10px 10px / 20px 20px radial-gradient(#d1d1d1 1px, transparent 0);
+    fixed 10px 10px / 20px 20px radial-gradient(#d1d1d1 1px, transparent 0); */
 }
 
-a {
+.prose a {
   text-underline-position: from-font;
   text-decoration-skip-ink: all;
   text-decoration-color: #a5adb1 !important;
@@ -150,9 +150,9 @@ tr {
 }
 
 @media only screen and (max-width: 600px) {
-  canvas {
+  /* canvas {
     display: none;
-  }
+  } */
 }
 
 canvas {
@@ -166,4 +166,18 @@ canvas:hover {
 
 canvas:active {
   transform: scale(2);
+}
+
+div .nx-grow {
+  font-size: 0.9rem;
+}
+
+project {
+  margin: 0px;
+}
+
+.nx-prose-sm :where(img):not(:where([class~=nx-not-prose] *)) {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  border-width: 1px;
 }
